# raytracer

./: CMakeLists.txt  main.cpp  vcpkg.json
include/: Actor.h  App.h  Camera.h  DebugRenderer.h  Film.h  GUI.h  Material.h  MyCamera.h  MyMaterial.h  MySphere.h  Object.h  Parameters.h  PixelRenderer.h  Point.h  Primitive.h  Ray.h  Renderer.h  Scene.h  Sphere.h  Texture.h
include/cameras/: Camera.h  OrthographicCamera.h  PerspectiveCamera.h
include/core/: App.h  Primitive.cpp  Primitive.h  Ray.h  Scene.h  Texture.h
include/integrators/: Integrator.h  MonteCarloIntegrator.h
include/lights/: Light.h  RectangleLight.h  SphereLight.h
include/materials/: Material.h
include/samplers/: CenterSampler.h  RandomSampler.h  Sampler.h
include/shapes/: Polygon.h  Rectangle.h  Shape.h  Sphere.h  Tetrahedron.h  Triangle.h
resources/: ResourcePath.h.in
resources/shaders/: shader0.vert
source/: Actor.cpp  App.cpp  Camera.cpp  DebugRenderer.cpp  Film.cpp  GUI.cpp  MyCamera.cpp  MySphere.cpp  Object.cpp  PixelRenderer.cpp  Point.cpp  Primitive.cpp  Ray.cpp  Renderer.cpp  Scene.cpp  Sphere.cpp  Texture.cpp
source/cameras/: Camera.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp
source/core/: App.cpp  Primitive.cpp  Ray.cpp  Scene.cpp  Texture.cpp
source/integrators/: Integrator.cpp  MonteCarloIntegrator.cpp
source/lights/: Light.cpp  RectangleLight.cpp  SphereLight.cpp
source/materials/: Material.cpp
source/samplers/: CenterSampler.cpp  RandomSampler.cpp  Sampler.cpp
source/shapes/: Polygon.cpp  Rectangle.cpp  Shape.cpp  Sphere.cpp  Tetrahedron.cpp  Triangle.cpp
